--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <nav class="navbar navbar-expand-lg custom_nav-container">
         <a class="navbar-brand" href="index.html">
           <span>
-            Healet
+            Telvza Tn 
           </span>
         </a>
         <div class="" id="">
@@ -46,11 +46,7 @@
               <span class="s-3"> </span>
             </button>
             <div id="myNav" class="overlay">
-              <div class="overlay-content">
-                <a href="index.html">Home</a>
-                <a href="about.html">About</a>
-                <a href="shop.html">Shop</a>
-                <a href="blog.html">Blog</a>
+             
               </div>
             </div>
           </div>
@@ -71,12 +67,11 @@
       <div class="col-md-9 col-lg-8">
         <div class="detail-box">
           <h1>
-            Best Jewellery
+            أول موقع  تونسي  لمشاهدة الافلام و المسلسلات بدون إعلانات و بجودة عالية
             <br> Collection
           </h1>
           <p>
-            It is a long established fact that a reader will be distracted by the readable content of a page when
-            looking at its layout. The point of using Lorem
+            شاهد و حمل جميع الافلام التونسية و الاجنبية و الاسيوية بدون إعلانات و بجودة عالية جدا 
           </p>
           <div>
             <a href="" class="slider-link">
