--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <div class="container">
       <p>
         &copy; <span id="displayYear"></span> All Rights Reserved By
-        <a href="https://html.design/">Telvza Tn </a>
+        <a href="https://telvza-tn.blogspot.com/">Telvza Tn </a>
       </p>
     </div>
   </footer>
