--- a/index.html
+++ b/index.html
@@ -74,8 +74,7 @@
           </p>
           <div>
             <a href="https://telvza-tn.blogspot.com" class="slider-link">
-              شـــــــــــــاهد الان 
-            </a>
+<div style="text-align: center;"><b><span style="font-family: El Messiri; font-size: x-large;">شاهد الان</span></b></div>            </a>
           </div>
         </div>
       </div>
