--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 
 <head>
+<meta name="google-site-verification" content="--m7DWbaEIWmMfRMa2bcOY7oMW9vEE7qdjTOrHLq70o" />
+  
   <!-- Basic -->
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
